--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "intervention/image-laravel": "^1.3",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "unicodeveloper/laravel-paystack": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
