--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,16 +21,18 @@ jobs:
           tools: composer
 
       - name: Install Dependencies
-        run: |
-          composer install --prefer-dist --no-dev --optimize-autoloader
-          composer dump-autoload
+        run: composer install --prefer-dist --no-dev --optimize-autoloader
 
-      - name: Set Laravel Permissions
+      - name: Set Environment Variables for MySQL
         run: |
-          chmod -R 775 storage bootstrap/cache
-          chmod -R 775 public
+          echo "DB_CONNECTION=mysql" >> .env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
+          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
 
-      - name: Cache Laravel Configuration
+      - name: Clear & Cache Laravel Config
         run: |
           php artisan config:clear
           php artisan cache:clear
@@ -46,22 +48,6 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: "./"
           server-dir: "/public_html/api/"
-          timeout: 600000
-          passive: true
-
-      - name: Set Correct Permissions After Deployment
-        run: |
-          chmod -R 775 storage bootstrap/cache
-          chmod -R 775 public
 
       - name: Run Laravel Migrations
-        env:
-          APP_KEY: ${{ secrets.APP_KEY }}
-          DB_CONNECTION: mysql
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          DB_DATABASE: ${{ secrets.DB_DATABASE }}
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        run: |
-          php artisan migrate --force
+        run: php artisan migrate --force
