--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,11 @@
-name: Deploy Laravel to Hostinger via SSH
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Setup SSH
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          HOSTINGER_IP: ${{ secrets.HOSTINGER_IP }}
-          SSH_USER: ${{ secrets.SSH_USER }}
-          SSH_PORT: ${{ secrets.SSH_PORT }}
+      - name: Deploy via SCP
         run: |
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -p $SSH_PORT -H $HOSTINGER_IP >> ~/.ssh/known_hosts
+          scp -P $SSH_PORT -r . $SSH_USER@$HOSTINGER_IP:/home/$SSH_USER/public_html/api
 
-      - name: Deploy Laravel API to Hostinger
+      - name: Run Laravel Commands via SSH
         run: |
           ssh -p $SSH_PORT $SSH_USER@$HOSTINGER_IP << 'EOF'
             cd public_html/api
-            git reset --hard  # Reset changes to avoid conflicts
-            git pull origin main
             composer install --no-dev --optimize-autoloader
             php artisan migrate --force
             php artisan config:clear
