--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Laravel to Hostinger via SSH
 on:
   push:
     branches:
-      - master  # Change if using another branch
+      - master  # Change this if using another branch
 
 jobs:
   deploy:
@@ -12,6 +12,12 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+
+      - name: Debug SSH Variables
+        run: |
+          echo "SSH_PORT: $SSH_PORT"
+          echo "SSH_USER: $SSH_USER"
+          echo "HOSTINGER_IP: $HOSTINGER_IP"
 
       - name: Setup SSH
         env:
@@ -29,13 +35,24 @@ jobs:
         run: |
           ssh -p $SSH_PORT $SSH_USER@$HOSTINGER_IP << 'EOF'
             cd public_html/api
-            git pull origin main
+            
+            echo "🔄 Resetting Git Repository"
+            git reset --hard
+            git pull origin master
+            
+            echo "📦 Installing Dependencies"
             composer install --no-dev --optimize-autoloader
+            
+            echo "🚀 Running Migrations"
             php artisan migrate --force
+            
+            echo "🧹 Clearing Caches"
             php artisan config:clear
             php artisan cache:clear
             php artisan config:cache
             php artisan route:cache
             php artisan view:cache
+            
+            echo "✅ Deployment Complete"
             exit
           EOF
