move the changes

--- a/.env.testing
+++ b/.env.testing
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+CLOUDINARY_CLOUD_NAME=dugn42e17
+CLOUDINARY_API_KEY=744623855452439
+CLOUDINARY_API_SECRET=P7nTj3uyyZ_hlvugtxb7qRf6bl4
+CLOUDINARY_UPLOAD_PRESET=your_preset_if_any
