--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "cloudinary-labs/cloudinary-laravel": "^3.0",
         "intervention/image": "^3.9",
         "intervention/image-laravel": "^1.3",
         "laravel/framework": "^11.31",
